[package]
name = "sambrs"
version = "0.1.0"
authors = ["Samuel Van der Stappen <shogun_einst.0i@icloud.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/rhizomer/sambrs"
documentation = "https://docs.rs/sambrs"
categories = ["os::windows-apis", "filesystem"]
keywords = ["windows", "smb", "share", "network"]
description = """
A tiny wrapper around `WNetAddConnection2A` and `WNetCancelConnection2A`. The
goal is to offer an ergonomic interface to connect to an SMB network share on
Windows.
"""

[dependencies]
thiserror = "1"
tracing = "0.1"
windows-sys = { version = "0.52", features = [
  "Win32_NetworkManagement_WNet",
  "Win32_Foundation",
] }
