[package]
name = "sambrs"
version = "0.1.2"
authors = ["Samuel Van der Stappen <shogun_einst.0i@icloud.com>"]
license = "MIT"
readme = "README.md"
edition = "2024"
repository = "https://github.com/samvdst/sambrs"
documentation = "https://docs.rs/sambrs"
categories = ["os::windows-apis", "filesystem"]
keywords = ["windows", "smb", "share", "network"]
description = """
A tiny ergonomic wrapper around WNetAddConnection2A to connect to SMB shares on Windows.
"""

[dependencies]
thiserror = "1"
tracing = "0.1"
windows-sys = { version = "0.52", features = [
  "Win32_NetworkManagement_WNet",
  "Win32_Foundation",
] }
